--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,67 @@
     transform: rotate(360deg);
   }
 }
+.content{
+  color: white;
+}
+.header-grad{
+  background: #8A2387;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #F27121, #E94057, #8A2387);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #F27121, #E94057, #8A2387); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+.mdl-layout__drawer{
+  background: #8A2387  !important;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #F27121, #E94057, #8A2387) !important;  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #F27121, #E94057, #8A2387) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+.mdl-layout-title{
+  color: white !important;
+  font-size: 20px;
+}
+.mdl-navigation__link{
+  color: white !important;
+  font-size: 15px;
+}
+.mdl-navigation__link:hover{
+  background: transparent !important;
+}
+.about-body{
+  margin: auto ;
+  background: grey;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content:center ;
+  padding-top: 2em;
+}
+.grid-body{
+  text-align: center ;
+  justify-content:  center;
+  width: 80%;
+  height: 510px;
+  background: white;
+  color: black;
+  border: 2px solid red;
+  margin-bottom: 20px;
+}
+
+.grid-body h2{
+  font-family: 'Anton' , sans-serif;
+}
+.grid-body p{
+  font-family: 'Oxygen' , sans-serif;
+  font-weight: bold;
+  text-align: justify;
+}
+
+.grid-body hr{
+  border-top: 5px dotted black;
+  width: 50%;
+  margin: auto;
+}
+.contact-list i{
+  font-size: 66px;
+  padding-right: 1em;;
+}
